WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273569
Added a compile time assertion that forbids classes that offer WeakPtr with no corresponding RefPtr or CheckedPtr
https://bugs.webkit.org/show_bug.cgi?id=273569
Summary
Added a compile time assertion that forbids classes that offer WeakPtr with n...
Geoffrey Garen
Reported
2024-05-01 13:10:34 PDT
https://github.com/WebKit/WebKit/pull/27847
Attachments
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2024-05-01 13:11:49 PDT
<
rdar://problem/127296969
>
Geoffrey Garen
Comment 2
2024-05-01 13:12:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27847
EWS
Comment 3
2024-05-01 13:15:04 PDT
Committed
278224@main
(c13321a96e1d): <
https://commits.webkit.org/278224@main
> Reviewed commits have been landed. Closing PR #27847 and removing active labels.
Diego Pino
Comment 4
2024-05-01 21:20:20 PDT
After this patch, the GTK-Linux-64-bit-Release-Clang-Build bot is failing with the followin build error:
https://build.webkit.org/#/builders/629/builds/11538
``` In file included from /app/webkit/Source/WebKit/UIProcess/WebsiteData/WebsiteDataStoreClient.h:29: /app/webkit/Source/WebKit/UIProcess/Authentication/AuthenticationChallengeProxy.h:47:33: error: unknown type name 'nullptr_t'; did you mean 'std::nullptr_t'? using WeakPtrSecKeyProxyStore = nullptr_t; ^~~~~~~~~ std::nullptr_t /usr/lib/gcc/x86_64-unknown-linux-gnu/13.2.0/../../../../include/c++/13.2.0/x86_64-unknown-linux-gnu/bits/c++config.h:312:29: note: 'std::nullptr_t' declared here typedef decltype(nullptr) nullptr_t; ^ 1 error generated. ```
Diego Pino
Comment 5
2024-05-01 21:21:11 PDT
Re-opening for pull request
https://github.com/webkit/webkit/pull/28034
EWS
Comment 6
2024-05-01 21:29:15 PDT
Committed
278246@main
(514a7d938a6c): <
https://commits.webkit.org/278246@main
> Reviewed commits have been landed. Closing PR #28034 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug