[GTK] Unreviewed, build fix for Clang after 278224@main https://bugs.webkit.org/show_bug.cgi?id=273569

Rename 'nullptr_t' to 'std::nullptr_t'.

* Source/WebKit/UIProcess/Authentication/AuthenticationChallengeProxy.h:

Canonical link: https://commits.webkit.org/278246@main